# softh-stockmarket

./: README.md  api.py  data2.csv  demo_api.py  main.py  output_template_data1.json  pyproject.toml  requirements.txt  test_validation.py  vercel.json  winners_data2.json
api/: main.py  pipe.py  validation.py  winners_data1.json
data/: data3.csv  data4.csv  test_invalid_cols.csv  test_missing_columns.csv  test_nan_in_kurs.csv  winners_data2.json  winners_data3.json  winners_data4.json
tests/: test_csv_val.py  test_success.py
